feat(events): add integration events

--- a/src/Locator/appsettings.json
+++ b/src/Locator/appsettings.json
@@ -18,10 +18,13 @@
           "ApiKey": "",
           "BaseUri": "https://api.ipgeolocation.io/ipgeo"
         },
-        "IpApi": {
-
-        }
+        "IpApi": {}
       }
     }
+  },
+  "BrokerConfiguration": {
+    "Host": "localhost",
+    "UserName": "guest",
+    "Password": "guest"
   }
 }
