--- a/src/Locator/Locator.csproj
+++ b/src/Locator/Locator.csproj
@@ -7,10 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Locator.IntegrationMessages" Version="1.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
 	  <PackageReference Include="MongoDb.EntityFrameworkCore" Version="8.0.3" />
+	  <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Features\Common\" />
+    <Folder Include="Subscriptions\" />
   </ItemGroup>
 
 </Project>
